--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ir.geek.parvaneh">
 
+    <!-- To auto-complete the email text field in activity_loginogin form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -9,23 +13,28 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splash">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Intro"/>
+        <activity android:name=".IntroActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".documentActivity" />
-        <activity android:name=".SportPlan" />
-        <activity android:name=".FoodPlan" />
-        <activity android:name=".Ability" />
-        <activity android:name=".SportTest" />
-        <activity android:name=".Terminology" />
-        <activity android:name=".Massage" />
-        <activity android:name=".BodyBuild" />
+        <activity android:name=".SportPlanActivity" />
+        <activity android:name=".FoodPlanActivity" />
+        <activity android:name=".AbilityActivity" />
+        <activity android:name=".SportTestActivity" />
+        <activity android:name=".TerminologyActivity" />
+        <activity android:name=".MassageActivity" />
+        <activity android:name=".BodyBuildActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".ForgetActivity"></activity>
     </application>
 
 </manifest>
