--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation project(':persianmaterialdatetimepicker')
 }
