--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:label="@string/title_activity_login" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".ForgetActivity" />
-        <activity android:name=".NewSportPlanActivity"></activity>
+        <activity android:name=".NewSportPlanActivity" />
+        <activity android:name=".Chang_Document"></activity>
     </application>
 
 </manifest>
