Complete profile activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".IntroActivity" />
         <activity android:name=".MenuActivity" />
-        <activity android:name=".documentActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".SportPlansActivity" />
         <activity android:name=".FoodPlanActivity" />
         <activity android:name=".AbilityActivity" />
@@ -37,7 +37,6 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".ForgetActivity" />
         <activity android:name=".NewSportPlanActivity" />
-        <activity android:name=".Chang_Document" />
         <activity android:name=".TerminologyItemActivity"></activity>
     </application>
 
