--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SportPlansActivity" />
         <activity android:name=".FoodPlanActivity" />
-        <activity android:name=".SportTestActivity" />
+        <activity android:name=".SportTestsActivity" />
         <activity android:name=".TerminologyActivity" />
         <activity android:name=".MassageActivity" />
         <activity android:name=".BodyBuildActivity" />
@@ -36,7 +36,8 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".ForgetActivity" />
         <activity android:name=".NewSportPlanActivity" />
-        <activity android:name=".TerminologyItemActivity"></activity>
+        <activity android:name=".TerminologyItemActivity" />
+        <activity android:name=".SportTestActivity"></activity>
     </application>
 
 </manifest>
