Info_account and edite_password activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
         <activity android:name=".ForgetActivity" />
         <activity android:name=".NewSportPlanActivity" />
         <activity android:name=".TerminologyItemActivity" />
-        <activity android:name=".SportTestActivity"></activity>
+        <activity android:name=".SportTestActivity" />
+        <activity android:name=".InfoAccountActivity" />
+        <activity android:name=".Edite_passwordActivity"></activity>
     </application>
 
 </manifest>
