--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,14 @@
         <activity android:name=".ForgetActivity" />
         <activity android:name=".NewSportPlanActivity" />
         <activity android:name=".TerminologyItemActivity" />
-        <activity android:name=".SportTestActivity" android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity
+            android:name=".SportTestActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".SportPlanActivity" />
         <activity android:name=".InfoAccountActivity" />
         <activity android:name=".EditPasswordActivity" />
-        <activity android:name=".MassageActivity"></activity>
+        <activity android:name=".MassageActivity" />
+        <activity android:name=".Req_CoachActivity" />
     </application>
 
 </manifest>
